# Desert

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
UML/: uml.mdj
assets/Background/: Background.psd  Background.xcf
assets/Button/: Button.xcf
assets/Deceased/: Deceased_Spritesheet.psd
assets/Hyena/: Hyena_Spritesheet.psd
assets/Mummy/: Mummy_Spritesheet.psd
assets/Scorpio/: Scorpio_Spritesheet.psd
assets/Snake/: Snake_Spritesheet.psd
assets/Vulture/: Vulture_Spritesheet.psd
include/: Ent.h  Game.h
include/Animation/: Animation.h
include/Control/: MenuControl.h  Observer.h  PlayerControl.h  TesteObserver.h  TextInput.h
include/Entities/: Entity.h  MovingEntity.h  StaticEntity.h
include/GraphicalElements/: Animation.h  Button.h  CoinAnimation.h  Heart.h  Hud.h  MultiFrameAnimation.h  SingleAnimation.h  SingleFrameAnimation.h  Text.h
include/List/: EntityList.h  List.h
include/Managers/: Animation.h  Collision.h  Events.h  Graphics.h  Input.h
include/Math/: CoordTL.h
include/Menus/: GameOverMenu.h  LeaderboardMenu.h  MainMenu.h  Menu.h  PauseMenu.h  SettingsMenu.h
include/States/: Game.h  Level.h  State.h  StateMachine.h
include/WorldGenerator/: WorldGenerator.h
src/: Ent.cpp  Game.cpp  main.cpp
src/Animation/: Animation.cpp
src/Control/: MenuControl.cpp  Observer.cpp  PlayerControl.cpp  TesteObserver.cpp  TextInput.cpp
src/Entities/: Entity.cpp  MovingEntity.cpp  StaticEntity.cpp
src/GraphicalElements/: Animation.cpp  Button.cpp  CoinAnimation.cpp  Heart.cpp  Hud.cpp  MultiFrameAnimation.cpp  SingleAnimation.cpp  Text.cpp  (+1 more)
(+37 files in other folders)
